Bug 156040 - Dark Mode - Category names are not visible in the Base control panel
Summary: Dark Mode - Category names are not visible in the Base control panel
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.5.4.2 release
Hardware: All Windows (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:24.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Windows-Dark-Mode
  Show dependency treegraph
 
Reported: 2023-06-23 17:13 UTC by robomurphy98
Modified: 2023-10-11 21:40 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Title's categories in default theme (22.61 KB, image/png)
2023-06-23 17:15 UTC, robomurphy98
Details
No titles (bug) in dark theme. (18.50 KB, image/png)
2023-06-23 17:16 UTC, robomurphy98
Details

Note You need to log in before you can comment on or make changes to this bug.
Description robomurphy98 2023-06-23 17:13:21 UTC
Description:
Good afternoon everyone, a few days ago I noticed a bug and is that when I put the dark theme and open a database in LibreOffice Base I do not see the names of the categories where are the forms, reports etc ... are seen with a white rectangle that you can not see anything. I tried to deactivate Skia in case it was a problem but it is still the same.

Steps to Reproduce:
1.Open a database of from the wizard (launch de app LO Base).
2.See the bug in the categories.

Actual Results:
The titles are not visible.

Expected Results:
See the names of the categories.


Reproducible: Always


User Profile Reset: No

Additional Info:
I have a NVIDIA GeForce GTX 950 and I run LibreOffice on Windows 10. Skia enabled.
Comment 1 robomurphy98 2023-06-23 17:15:56 UTC
Created attachment 188070 [details]
Title's categories in default theme

I see them.
Comment 2 robomurphy98 2023-06-23 17:16:38 UTC
Created attachment 188071 [details]
No titles (bug) in dark theme.

No titles. The bug.
Comment 3 Stéphane Guillou (stragu) 2023-06-26 13:09:48 UTC
Thank you for the report.

Did you first turn on the Windows dark theme before opening LibreOffice? Or did you change anything in the Tools > Options > LibreOffice > View menu? It would be helpful to know which exact succession of events triggers the issue.

I found that, if the OS theme is changed while LO is open, parts of the UI might not update. Testing with:

Version: 7.5.4.2 (X86_64) / LibreOffice Community
Build ID: 36ccfdc35048b057fd9854c757a8b67ec53977b6
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: fr-FR (en_AU.UTF-8); UI: en-US
Calc: threaded

Please also paste here the version information copied from Help > About LibreOffice.
Comment 4 robomurphy98 2023-06-30 17:06:12 UTC
Yes, I have set the dark theme in Windows before opening LibreOffice and it caught the theme by system and went dark. I also tried these ways:

1 - Set Windows to light theme.
2 - Set LibreOffice to dark theme in Options - View.

1 - Set Windows to dark theme.
2 - LibreOffice now detects the theme.
3 - Set the application colors to dark (Options - Application colors).

Version: 7.5.4.2 (X86_64) / LibreOffice Community
Build ID: 36ccfdc35048b057fd9854c757a8b67ec53977b6
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: es-ES
Calc: CL threaded
Comment 5 QA Administrators 2023-07-01 03:13:23 UTC Comment hidden (obsolete)
Comment 6 Kira Tubo 2023-10-05 06:41:58 UTC
Reproduced. Per Comment 3, I restarted my PC with Windows dark mode enabled, then I reset LO to factory settings before testing. 

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: dd7fc07f83416a3d8a444947b7d28f7347520d6a
CPU threads: 6; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

Version: 7.5.5.2 (X86_64) / LibreOffice Community
Build ID: ca8fe7424262805f223b9a2334bc7181abbcbf5e
CPU threads: 6; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 7 Kira Tubo 2023-10-06 19:41:20 UTC
Bibisected win64-7.5. Added Caolán McNamara to cc. 

Regression occurring at: https://git.libreoffice.org/core/+/8d66d1f270b1f3fdb76d749fa92189d669ea436d

----------------------------

commit 8d66d1f270b1f3fdb76d749fa92189d669ea436d	[log]
author	Caolán McNamara <caolanm@redhat.com>	Fri Dec 02 12:26:42 2022 +0000
committer	Adolfo Jayme Barrientos <fitojb@ubuntu.com>	Fri Dec 02 15:51:55 2022 +0000
tree ff24462a7d63718385319c78ce2551a0ce6fd9d5
parent f9395a123e8c85134bdd6e471bc93b2745e22a9d [diff]

----------------------------

commit 158ad65b2c606d71ca7ba1b5ad3ad1ff4171ef26
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Fri Dec 2 09:18:21 2022 -0800

    source 8d66d1f270b1f3fdb76d749fa92189d669ea436d
Comment 8 Caolán McNamara 2023-10-07 18:06:21 UTC
We use "ShadowColor" for the background and "LightColor" for the foreground in this case. It look ok for the gtk case, so its probably a poor choice for "LightColor" in windows dark mode.
Comment 9 Commit Notification 2023-10-08 12:55:22 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/70c46e0e03a758fda4e94b561fdcae722414719f

tdf#156040 pick a better "LightColor" for windows dark theme

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 robomurphy98 2023-10-11 21:40:14 UTC
Thanks to all!