tdf#156040 pick a better "LightColor" for windows dark theme

in the absence of a better idea, do like StyleSettings::Set3DColors does

Change-Id: I9868d4eb94fb221fcbf5e3a4e4761fb2bd8888fc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157681
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>